Fix du retour en arrière + retour au menu ajouté (action 0)