@@ -1,6 +1,5 @@
 import java.util.*;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
 public class Game {
     private final List<Player> players;
@@ -58,7 +57,6 @@ public class Game {
 
     private void showMenu(Player player) {
         while (true) {
-
             showHeader("ACTIONS DISPONIBLES");
             System.out.println("1. Acheter une carte disponible");
             System.out.println("2. Prendre deux gemmes de la même couleur");
@@ -68,16 +66,22 @@ public class Game {
                 var action = askInt("Votre choix : ");
                 System.out.println();
 
+                boolean actionSuccess = false;
                 switch (action) {
-                    case 1 -> { buyCard(player); return; }
-                    case 2 -> { pickTwiceSameGem(player); return; }
-                    case 3 -> { pickThreeDifferentGems(player); return; }
+                    case 1 -> actionSuccess = buyCard(player);
+                    case 2 -> actionSuccess = pickTwiceSameGem(player);
+                    case 3 -> actionSuccess = pickThreeDifferentGems(player);
                     default -> System.out.println("Option invalide. Veuillez choisir un nombre entre 1 et 3.\n");
                 }
+
+                if (actionSuccess) {
+                    return; // Action valide, on quitte le menu
+                } else {
+                    System.out.println("Retour au menu.");
+                }
             } catch (InputMismatchException e) {
-                System.out.println();
-                System.out.println("Veuillez entrer un chiffre.\n");
-                showMenu(player);
+                System.out.println("Veuillez entrer un chiffre.");
+                new Scanner(System.in).nextLine(); // Vide le buffer
             }
         }
     }
@@ -96,157 +100,157 @@ public class Game {
 
     private int askInt(String prompt) {
         Scanner scanner = new Scanner(System.in);
-        System.out.print(prompt);
-        return scanner.nextInt();
+        while (true) {
+            try {
+                System.out.print(prompt);
+                return scanner.nextInt();
+            } catch (InputMismatchException e) {
+                System.out.println("Coup invalide : veuillez uniquement un chiffre");
+                scanner.nextLine(); // Vide le buffer
+            }
+        }
     }
 
-    private void buyCard(Player p) {
-        Objects.requireNonNull(p);
-
-        /* --------- plus de cartes sur l’étalage ? --------- */
+    private boolean buyCard(Player p) {
         if (displayedCards.isEmpty()) {
             System.out.println("Aucune carte n'est actuellement proposée.");
-            return;
+            showMenu(p);
+            return false;
         }
 
-        /* --------- boucle jusqu’à un achat valide --------- */
         while (true) {
             showWallet(p);
-
             showHeader("CARTES DISPONIBLES À L'ACHAT");
             showCards(displayedCards);
 
             var idx = askInt("Indice de la carte (1-%d, 0 pour annuler) : "
                     .formatted(displayedCards.size())) - 1;
 
-            /* --- 0 → on quitte la méthode sans rien changer --- */
             if (idx < 0) {
                 System.out.println("Achat annulé.\n");
-                return;
+                return false;
             }
-            /* --- indice hors bornes : on redemande --- */
             if (idx >= displayedCards.size()) {
                 System.out.println("Indice invalide, réessayez.\n");
                 continue;
             }
 
-            /* --- récupération de la carte choisie --- */
             var chosen = displayedCards.get(idx);
-            var cost = chosen.price();
-
-            /* --- vérification du porte-monnaie --- */
-            if (!p.getWallet().canAfford(cost)) {
-                System.out.println("Pas assez de gemmes pour cette carte, "
-                        + "choisissez-en une autre.\n");
-                continue;                       // on repart au début du while
+            if (!p.getWallet().canAfford(chosen.price())) {
+                System.out.println("Pas assez de gemmes pour cette carte, choisissez-en une autre.\n");
+                continue;
             }
 
-            /* --------- transaction validée --------- */
-            p.getWallet().pay(cost);            // débite les gemmes
-            displayedCards.remove(idx);         // enlève de l’étalage
-            p.addCard(chosen);                  // ajoute à la main
+            p.getWallet().pay(chosen.price());
+            displayedCards.remove(idx);
+            p.addCard(chosen);
             System.out.println("Carte achetée : " + chosen + "\n");
 
-            /* --------- remplacement dans l’étalage --------- */
             if (!cards.isEmpty()) {
-                displayedCards.add(cards.remove(0));
+                displayedCards.add(cards.removeFirst());
             }
-            return;
+            return true;
         }
     }
 
-    private void pickTwiceSameGem(Player player) {
+    private boolean pickTwiceSameGem(Player player) {
         Objects.requireNonNull(player);
         showBank();
-        var success = false;
-        while (!success) {
+        while (true) {
             System.out.println("Vous pouvez récupérer deux gemmes de la même couleur, si > 4 : ");
             System.out.println("1. Ruby, 2. Emerald, 3. Diamond, 4. Sapphire, 5. Onyx");
+            System.out.println("0. Annuler et retourner au menu");
             var action = askInt("Votre choix : ");
 
-             success = switch (action) {
+            if (action == 0) {
+                System.out.println("Action annulée.\n");
+                return false;
+            }
+
+            var success = switch (action) {
                 case 1 -> updateUserWalletForSameGem(player, GemToken.RUBY);
                 case 2 -> updateUserWalletForSameGem(player, GemToken.EMERALD);
                 case 3 -> updateUserWalletForSameGem(player, GemToken.DIAMOND);
                 case 4 -> updateUserWalletForSameGem(player, GemToken.SAPPHIRE);
                 case 5 -> updateUserWalletForSameGem(player, GemToken.ONYX);
                 default -> {
-                    System.out.println();
-                    System.out.println("Action inconnue. Veuillez réessayer.");
-                    System.out.println();
+                    System.out.println("\nAction inconnue. Veuillez réessayer.\n");
                     yield false;
                 }
             };
+
+            if (success) return true;
         }
     }
 
     private boolean updateUserWalletForSameGem(Player player, GemToken token) {
-        Objects.requireNonNull(player);
-        Objects.requireNonNull(token);
-
-        int amount = bank.getAmount(token);
-        if (amount < 4) {
-            System.out.println("Pas assez de gemmes " + token + " dans la banque (il en faut au moins 4).");
+        if (bank.getAmount(token) < 4) {
+            System.out.println("Pas assez de gemmes " + token + " dans la banque (il en faut au moins 4).\n");
             return false;
         }
-
-        System.out.println("\nDeux jetons " + token + " ont été ajoutés à vos jetons !\n");
-        showWallet(player);
-
         player.getWallet().add(token, 2);
         bank.remove(token, 2);
+        System.out.println("\nDeux jetons " + token + " ajoutés !\n");
         return true;
     }
 
     private boolean updateUserWalletForDifferentGems(Player player, GemToken token, List<GemToken> pickedGems) {
-        Objects.requireNonNull(player);
-        Objects.requireNonNull(token);
-        Objects.requireNonNull(pickedGems);
-
         if (pickedGems.contains(token)) {
-            System.out.println("Coup invalide ! Vous avez déjà récupéré une gemme " + token);
+            System.out.println("Vous avez déjà pris cette gemme !");
             return false;
         }
-
         if (bank.getAmount(token) <= 0) {
-            System.out.println("Plus de gemmes: " + token);
+            System.out.println("Plus de gemmes disponibles pour " + token);
             return false;
         }
-
         pickedGems.add(token);
         player.getWallet().add(token, 1);
         bank.remove(token, 1);
         return true;
     }
 
-    private void pickThreeDifferentGems(Player player) {
+    private boolean pickThreeDifferentGems(Player player) {
         List<GemToken> pickedGems = new ArrayList<>();
-        var i = 0;
         System.out.println("Vous pouvez récupérer trois gemmes différentes dans la banque :");
         System.out.println("1. Ruby, 2. Emerald, 3. Diamond, 4. Sapphire, 5. Onyx");
-        while (i < 3) {
-            int action = askInt("Votre choix (" + (i + 1) + "/3) : ");
+        System.out.println("0. Annuler et retourner au menu");
 
-            var valid = switch (action) {
-                case 1 -> updateUserWalletForDifferentGems(player, GemToken.RUBY, pickedGems);
-                case 2 -> updateUserWalletForDifferentGems(player, GemToken.EMERALD, pickedGems);
-                case 3 -> updateUserWalletForDifferentGems(player, GemToken.DIAMOND, pickedGems);
-                case 4 -> updateUserWalletForDifferentGems(player, GemToken.SAPPHIRE, pickedGems);
-                case 5 -> updateUserWalletForDifferentGems(player, GemToken.ONYX, pickedGems);
-                default -> {
-                    System.out.println("Choix invalide ! Veuillez saisir un numéro d'action valide (1-5).");
-                    yield false;
+        while (pickedGems.size() < 3) {
+            try {
+                int action = askInt("Votre choix (" + (pickedGems.size() + 1) + "/3) : ");
+
+                if (action == 0) {
+                    // Remboursement des gemmes déjà prises
+                    for (GemToken token : pickedGems) {
+                        player.getWallet().remove(token, 1);
+                        bank.add(token, 1);
+                    }
+                    System.out.println("Action annulée. Les jetons ont été restitués.\n");
+                    return false;
                 }
-            };
 
-            if (valid) {
-                i++;
+                boolean valid = switch (action) {
+                    case 1 -> updateUserWalletForDifferentGems(player, GemToken.RUBY, pickedGems);
+                    case 2 -> updateUserWalletForDifferentGems(player, GemToken.EMERALD, pickedGems);
+                    case 3 -> updateUserWalletForDifferentGems(player, GemToken.DIAMOND, pickedGems);
+                    case 4 -> updateUserWalletForDifferentGems(player, GemToken.SAPPHIRE, pickedGems);
+                    case 5 -> updateUserWalletForDifferentGems(player, GemToken.ONYX, pickedGems);
+                    default -> {
+                        System.out.println("Choix invalide ! Veuillez saisir un numéro d'action valide (1-5).");
+                        yield false;
+                    }
+                };
+
+                if (!valid) {
+                    System.out.println("Ressaisissez un numéro d'action valide (1-5) ou 0 pour quitter");
+                }
+            } catch (InputMismatchException e) {
+                System.out.println("\nErreur : Veuillez entrer un chiffre valide.\n");
+                new Scanner(System.in).nextLine();
             }
         }
-
-        System.out.println("\nLes jetons " + pickedGems.stream()
-                .map(Enum::name)
-                .collect(Collectors.joining(", ")) + " ont bien été ajoutés à vos jetons !\n");
+        System.out.println("\nJetons ajoutés avec succès !\n");
+        return true;
     }
 
     private void showWallet(Player p) {
@@ -265,28 +269,20 @@ public class Game {
         displayedCards = new ArrayList<>(cards.subList(0, 4));
         System.out.println("Let the game begin !\n");
 
-        try (var scanner = new Scanner(System.in)) {          // auto-close
-            while (!gameOver) {
-                for (var current : players) {
-                    displayBoard();
-                    System.out.println(current.toString() + "\n");
-                    showMenu(current);
-                    if (current.getNbCards() >= 15) {
-                        gameOver = true;
-                    }
-                    System.out.println("----------------------------------------\n");
+        // auto-close
+        while (!gameOver) {
+            for (var current : players) {
+                displayBoard();
+                System.out.println(current.toString() + "\n");
+                showMenu(current);
+                if (current.getNbCards() >= 15) {
+                    gameOver = true;
                 }
+                System.out.println("----------------------------------------\n");
             }
         }
 
         displayRanking();
-    }
-
-    public void launchTest() {
-        System.out.println("Let the game begin !!!!!");
-        shuffleCards();
-        displayedCards = new ArrayList<>(cards.subList(0, 4));
-        displayBoard();
     }
 
     // Ajout d'un joueur dans la partie
